--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "latest",
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
+    "next-share": "^0.27.0",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "19.2.0",
